feat: ajustes de comportamento, algumas regras de negocio, ui, ux, qualidade e infra. Muitas frentes melhoradas.